fixed category names and adjusted spacing

--- a/static/base.css
+++ b/static/base.css
@@ -51,7 +51,7 @@ body {
     padding: 0px 5px 5px 5px;
     height: 100%;
     position: relative;
-    min-width: 150px;
+    min-width: 100px;
     white-space: nowrap;
 }
 
@@ -72,12 +72,16 @@ body {
 
 #navBarToolBar .navbarGroup button{
     border:none;
-    padding: 2px 6px;
+    padding: 2px 10px;
     height: 30px;
     color: white;
 }
 
-#navBarToolBar .navbarGroup button:first{
+#openKeyParameterTableTest{
+    font-size: 15px;
+}
+
+#navBarToolBar .navbarGroup button:first-of-type{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -86,7 +90,7 @@ body {
     color: white;
     position: absolute;
     bottom: -12px;
-    background-color: #003164;
+    background-color: #002d5d;
     left: 50%;
     transform: translateX(-50%);
     padding: 0px 5px;
